--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
       "react-hooks/exhaustive-deps": "warn",
       "no-console": [0],
       "arrow-body-style":[0],
-      "prefer-arrow-callback":[0]
+      "prefer-arrow-callback":[0],
+      "react/function-component-definition": "Off"
     }
   }
   
