--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nitn19.github.io/box-office",
+  "homepage": "https://sujit2141.github.io/BoxOffice",
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
